--- a/register.html
+++ b/register.html
@@ -3,23 +3,42 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <title>สมัครสมาชิก</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>สมัครสมาชิก | HAXPROREBORN</title>
     <style>
-        body { background-color: #121212; color: white; font-family: Arial, sans-serif; padding: 20px; }
-        h1 { color: red; }
-        form { background-color: #1e1e1e; padding: 20px; border-radius: 10px; width: 300px; margin: auto; }
-        input { width: 100%; padding: 10px; margin: 10px 0; }
-        input[type="submit"] { background-color: red; color: white; border: none; cursor: pointer; }
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #111;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            max-width: 800px;
+            margin: 40px auto;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        iframe {
+            width: 100%;
+            height: 800px;
+            border: none;
+        }
     </style>
 </head>
 <body>
-    <h1 style="text-align:center;">สมัครสมาชิก</h1>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-        ชื่อผู้ใช้: <input type="text" name="username" required><br>
-        อีเมล: <input type="email" name="email" required><br>
-        รหัสผ่าน: <input type="password" name="password" required><br>
-        ยืนยันรหัสผ่าน: <input type="password" name="confirm_password" required><br>
-        <input type="submit" value="สมัครสมาชิก">
-    </form>
+    <header>
+        <h1>HAXPROREBORN</h1>
+        <p>สมัครสมาชิกผ่านอีเมล</p>
+    </header>
+    <main>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe8D4yxc4warhvpRPGfXGxNBgkSUcC3aD9ffV6gUIum2WUGLw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">กำลังโหลด…</iframe>
+    </main>
 </body>
 </html>
